# manchengo

./: .env.production.example  .gitignore  .prettierignore  ADN-UI-UX.md  AJUSTEMENTS_FINAUX_STOCK.md  AUDIT-APP.md  AUDIT-WEB.md  AUDIT_COMPLET_2026-01-12.md  AUDIT_REPORT.md  AUDIT_STOCK_MODULE_2026.md  AUDIT_STOCK_POST_CORRECTION.md  AUDIT_TECHNIQUE_COMPLET.md  Cargo.toml  DEVOPS_REPORT.md  MANUEL-01-DIRECTEUR-ADMIN.md  MANUEL-02-PRODUCTION.md  MANUEL-03-STOCK.md  MANUEL-04-APPROVISIONNEMENT.md  MANUEL-05-COMPTABILITE.md  MANUEL-06-COMMERCIAL.md  MANUEL-07-OPERATEUR.md  MANUEL-08-QUALITE.md  MANUEL-09-IT.md  MANUEL-INDEX.md  PLAN_CORRECTION_STOCK_V1.md  RAPPORT_PROJET_COMPLET.md  README.md  SECURITY_REPORT.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  vercel.json
.husky/: pre-commit
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  state.rs
apps/desktop/src-tauri/src/api/: appro.rs  commercial.rs  invoice.rs  mod.rs  production.rs  stock.rs  sync.rs  system.rs
apps/desktop/src-tauri/src/commands/: commercial.rs  delivery.rs  mod.rs  production.rs  stock.rs
apps/desktop/src-tauri/src/core/: config.rs  mod.rs  scheduler.rs  security.rs
apps/desktop/src-tauri/src/dto/: appro.rs  commercial.rs  common.rs  invoice.rs  mod.rs  production.rs  stock.rs
apps/desktop/src-tauri/src/repositories/: client_repo.rs  invoice_repo.rs  lot_repo.rs  mod.rs  movement_repo.rs  product_repo.rs  production_repo.rs  purchase_order_repo.rs  recipe_repo.rs  supplier_repo.rs
apps/desktop/src-tauri/src/services/: appro_service.rs  commercial_service.rs  invoice_service.rs  mod.rs  production_service.rs  stock_service.rs  sync_service.rs
apps/desktop/src-tauri/ui/: index.html  sw.js
docs/: ARCHITECTURE_OFFLINE_FIRST.md  ASSUMPTIONS.md  AUDIT_BON_COMMANDE.md  BUSINESS_LOGIC_SPEC.md  FIGMA_DESIGN_SPEC.md  GEL_FONCTIONNEL_PRODUCTION.md  GUIDE_UTILISATEUR_STOCK.md  INFRA-FREEZE.md  LOGGING_PRODUCTION.md  MOBILE_APP_ARCHITECTURE.md  PHASE1_STABILITY_REPORT.md  PHASE2_TESTING_STRATEGY.md  PHASE3_OBSERVABILITY_AUDIT.md  PHASE4_UX_ROBUSTNESS.md  PHASE5_INDUSTRIALIZATION.md  PILOT-ACQUISITION-PLAN.md  PRICING-STRATEGY.md  PRODUCT-POSITIONING.md  ROADMAP.md  RUNBOOK_INCIDENTS.md  (+7 more)
(+669 files in other folders)
