[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/database",
    "packages/domain",
    "packages/sync",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Manchengo ERP Team"]
license = "Proprietary"
repository = "https://github.com/manchengo/erp"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled", "trace", "functions"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Cryptography (for QR checksum)
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
