[package]
name = "manchengo-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Manchengo ERP Desktop Application"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
manchengo-core = { path = "../../../packages/core" }
manchengo-database = { path = "../../../packages/database" }
manchengo-domain = { path = "../../../packages/domain" }
manchengo-sync = { path = "../../../packages/sync" }

tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
rusqlite.workspace = true
dirs = "5.0"
hostname = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
